kubernetes/auth/base/traefik-auth-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia-auth-middleware
  namespace: platform
spec:
  forwardAuth:
    address: http://authelia-svc.platform.svc:9091/api/verify?rd=https://${DOMAIN}/ssoauth/
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Group
      - Remote-Email
