kubernetes/auth/base/ingress-tls.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: authelia-ingress
  namespace: platform
  annotations:
    spec.ingressClassName: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /ssoauth
            backend:
              service:
                name: authelia-svc
                port:
                  name: http
